Aress7/src/objects/Outcode__c.object
<CustomObject>
    <fields>
        <fullName>RelatedOutcode__c</fullName>
        <formula>IF(ISNUMBER(RIGHT(LEFT(Related_Postcode__c, 2), 1)), LEFT(Related_Postcode__c, 1), LEFT(Related_Postcode__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RelatedOutcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Outcodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Postcode__c</fullName>
        <label>Related Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Outcode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RelatedOutcode__c</columns>
        <columns>RelatedUser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Outcode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>